# bitter

./: .gitignore  Cargo.toml  README.md  notes.md  ntoes.md
bencode/: Cargo.toml  notes.md
bencode/src/: de.rs  error.rs  lib.rs  map.rs  ser.rs  token.rs  torrent_test.rs
bencode/src/decode/: access.rs  decoder.rs  mod.rs  test.rs
bencode/src/encode/: encoder.rs  map.rs  mod.rs  string.rs  test.rs
bencode/test_torrents/: test_single_file.torrent
bittorrent/: Cargo.toml
bittorrent/src/: block.rs  client.rs  config.rs  de.rs  info.rs  lib.rs  main.rs  metainfo.rs  stats.rs  store.rs  torrent.rs  tracker.rs
bittorrent/src/disk/: disk.rs  mod.rs  piece.rs  tests.rs  torrent.rs
bittorrent/src/fs/: disk.rs  file.rs  mod.rs  piece.rs  tests.rs  torrent.rs
bittorrent/src/p2p/: handshake.rs  message.rs  mod.rs  session.rs  state.rs
bittorrent/src/picker/: mod.rs  partial_piece.rs  piece_picker.rs
bittorrent/src/tracker/: http.rs  mod.rs  udp.rs
bittorrent/tests/test_torrents/: test_multi.torrent  test_single.torrent  test_small.torrent
cli/: Cargo.toml
cli/src/: app.rs  main.rs
core/: Cargo.toml  log.txt
core/src/: block.rs  ctx.rs  lib.rs  main.rs  metainfo.rs  piece.rs  piece_selector.rs  state.rs  stats.rs  torrent.rs  tracker.rs
core/src/data/: bitfield.rs  block.rs  mod.rs  piece.rs  queue.rs
core/src/fs/: files.rs  mod.rs  write.rs
core/src/p2p/: bitfield.rs  handshake.rs  manage.rs  message.rs  mod.rs  peer.rs  request.rs  session.rs  state.rs
core/src/picker/: block_picker.rs  mod.rs  partial_piece.rs  piece_picker.rs
core/src/tracker/: http_comms.rs  mod.rs  peer_parse.rs  tracker.rs
gui/: Cargo.toml  index.html
gui/assets/: sw.js
gui/src/: app.rs  gui.rs  lib.rs  main.rs
gui/src/widgets/: info.rs  mod.rs
tui/: Cargo.toml
tui/src/: app.rs  data.rs  event.rs  lib.rs  main.rs  torrents.rs  ui.rs
