[package]
name = "bittorrent"
version = "0.1.0"
edition = "2021"

[dependencies]
rand                = "0.8.5"
serde               = "1.0.147"
serde_bytes         = "0.11.7"
serde_derive        = "1.0.147"
sha1                = "0.10"
thiserror           = "1.0.37"
reqwest             = "0.11.13"
url                 = "2.4.1"
bencode             = {version = "0.1.0", path = "../bencode"}
chrono              = "0.4.23"
hex                 = "0.4.3"
urlencoding         = "2.1.0"
bytes               = "1.3.0"
bitvec              = "1.0.1"
tokio               = { version = "1.32.0", features = ["full", "tracing"] }
tokio-util          = "0.7.8"
tracing             = "0.1.40"
tracing-subscriber  = "0.3.18"
console-subscriber  = "0.3.0"
futures             = "0.3.29"
lru                 = "0.12"

# test dependencies
[dev-dependencies]
hex-literal     = "0.3.4"
rand            = "0.8.4"
serde_bencode   = "0.2.3"
tempfile        = "3.10.0"
anyhow          = "1.0.81"

# for profling
[profile.release]
debug = true
