[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { version = "0.1.0", path = "../core" }
clap = { version = "4.0.29", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
tui = "0.19"
crossterm = "0.25"
anyhow = "1.0.66"