[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
bittorrent = { path = "../bittorrent" }
ratatui = "0.26.1"
crossterm = { version = "0.27.0", features = ["event-stream"]}
futures = "0.3.30"
color-eyre = "0.6.2"
ratatui-explorer = "0.1.1"
url = "2.4.1"
